testcases/error/missing_if_reset.veryl
module missing_if_reset {
    let clk: clock = 1;
    let rst: reset = 1;

    always_ff (clk, rst) {}
}
